<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/Text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/Text_field"
        android:textSize="@dimen/textview_font_size" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AC"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/One"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/One"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Two"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Three"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Four"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Five"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Six"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Minus"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Seven"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Eight"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nine"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Multiply"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Zero"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Period"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Equals"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
        <Button
            android:id="@+id/Divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Divide"
            android:onClick="OnClick"
            android:textSize="@dimen/button_font_size"/>
    </LinearLayout>




</LinearLayout>